# kiloTracker

./: .gitignore  CMakeLists.txt  LICENSE  README.md  settings.jaml  settings.jaml2
src/: Cli.cpp  Cli.h  Detector.cpp  Detector.h  Gui.cpp  Gui.h  Gui.hpp  Logger.cpp  Logger.h  Processor.cpp  Processor.h  Settings.cpp  Settings.h  Settings.hpp  Tracer.cpp  Tracer.h  main.cpp
